Release notes for xmlBlaster (http://www.xmlBlaster.org)
The "#99999" numbers are Subversion revision numbers.
 
 o #15866 added the possibility to disable going to polling if a response timeout comes from a ping:
          use dispatch/callback/stallOnPingTimeout=true or/and dispatch/connection/stallOnPingTimeout=true.
          This property is passed in the AddressBase

 o #15851 C# client: Csharp support extended
          o Supporting C and C++ clients as unmanaged code on Windows CE and normal Windows
          o Supporting C# as managed code on Windows CE and normal Windows and Mono/Linux
          See http://www.xmlBlaster.org/xmlBlaster/doc/requirements/client.c.windowsCE.html
	  See http://www.xmlblaster.org/xmlBlaster/doc/requirements/client.csharp.html

 o #15794 C++ client: Changed PublishReturnQos and SubscribeReturnQos in case of client side queueing
          to be identical to java client behaviour:
	  state id="OK"        (previously it was "QUEUED")
	  state info="QUEUED   (previously it was "")
	  See http://www.xmlBlaster.org/xmlBlaster/doc/requirements/interface.subscribe.html#return

 o #15750 C client: Full Windows CE port (including pthreads 2.7.0 and zlib 1.2.3)
          See http://www.xmlBlaster.org/xmlBlaster/doc/requirements/client.c.windowsCE.html

 o #15742 C client: First runnable Windows CE port (without pthreads)
          Added: -DWINCE compiler define
          Open: Is there any getenv() for Windows CE?, how to handle errno.h?
          Changed: -DDLL_BUILD to -D_WINDLL
          __FreeBSD__ code in helper.c is probably broken (needs testing)

 o #15735 dispatch statistics are cleaned up on the client side on reconnect also, this fixes a failing reconnect in case
          the update had activities, the connection ping detected a stale connection and the update ping did not return.

 o #15733 Fixed introduced error when removing entries from queues where the
          metadata returned 0 for maxNumSequences.
